--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -20,7 +20,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push
       run: |
-        docker build . --rm --force-rm --compress --no-cache=true --pull \
+        docker build . --compress --pull \
         --file Userge --tag rzlamrr/userge:latest
         docker push rzlamrr/userge:latest
 
@@ -35,7 +35,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push
       run: |
-        docker build . --rm --force-rm --compress --no-cache=true --pull \
+        docker build . --compress --pull \
         --file Megasdk --tag rzlamrr/megasdk:latest
         docker push rzlamrr/megasdk:latest
 
@@ -50,6 +50,6 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build & Push
       run: |
-        docker build . --rm --force-rm --compress --no-cache=true --pull \
+        docker build . --compress --pull \
         --file Daisyxmusic --tag rzlamrr/music:latest
         docker push rzlamrr/music:latest
